--- a/js/main/scrambleBody/scrambleBody.html
+++ b/js/main/scrambleBody/scrambleBody.html
@@ -1,6 +1,6 @@
 <div class="scramble-body">
 	<div class="game-zone">
-		<div class="title">The word has been scrambled! type in the letters in the right order</div>
+		<div class="title">The word has been scrambled! type in the letters in the right order, lose time for wrong answers, gain time for correct ones</div>
 		<div class="letter-wrapper">
 			<div class="single-letter" ng-repeat="item in wordTypedTracker track by $index">
 				<span ng-class="{'typed': item.typed}">
